k8s/argocd/rendered/demo/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-helloworld-svc
spec:
  ports:
  - name: web
    port: 8000
    protocol: TCP
    targetPort: web
  selector:
    app: helloworld
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld
  name: dev-helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: dev-demo-cm-b4596fgdcb
        image: rosscdh/hellopy:latest
        imagePullPolicy: Always
        name: kustomize-test
        ports:
        - containerPort: 8000
          name: web
        resources:
          limits:
            cpu: 500m
            memory: 118Mi
          requests:
            cpu: 210m
            memory: 64Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/managed: "true"
    kubernetes.io/ingress.class: nginx-eks
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: helloworld
  name: dev-helloworld-ingress
spec:
  rules:
  - host: hellopy.tes-build-nonprod.cookidoo.vorwerk-digital.com
    http:
      paths:
      - backend:
          service:
            name: dev-helloworld-svc
            port:
              name: web
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hellopy.tes-build-nonprod.cookidoo.vorwerk-digital.com
    secretName: hellopy-certificate-secret
